[gd_scene load_steps=3 format=3 uid="uid://enhanced_ui_001"]

[ext_resource type="Script" path="res://scripts/EnhancedUI.gd" id="1"]

[sub_resource type="Theme" id="Theme_1"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0.5)
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
ProgressBar/colors/font_color = Color(1, 1, 1, 1)
ProgressBar/styles/background = SubResource("StyleBoxFlat_1")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_2")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 0.8, 1)
Button/colors/font_pressed_color = Color(0.8, 0.8, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.8, 0.2, 0.9)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="EnhancedUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
theme = SubResource("Theme_1")

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" type="ProgressBar" parent="TopPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="ArmorBar" type="ProgressBar" parent="TopPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 50.0
value = 50.0

[node name="ShieldBar" type="ProgressBar" parent="TopPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 0.0

[node name="BoostBar" type="ProgressBar" parent="TopPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="VSeparator" type="VSeparator" parent="TopPanel/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="TopPanel/HBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Score: 0"
theme = SubResource("Theme_1")

[node name="WeaponLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Weapon: Minigun"
theme = SubResource("Theme_1")

[node name="AmmoLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Ammo: 999"
theme = SubResource("Theme_1")

[node name="ComboLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
visible = false
text = "Combo x1"
modulate = Color.YELLOW
theme = SubResource("Theme_1")

[node name="LevelLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Level: 1"
theme = SubResource("Theme_1")

[node name="WeaponPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = 60.0
theme = SubResource("Theme_1")

[node name="WeaponIcons" type="HBoxContainer" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
alignment = 1

[node name="MinimapPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 170.0
offset_bottom = -20.0
theme = SubResource("Theme_1")

[node name="Minimap" type="TextureRect" parent="MinimapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
modulate = Color(0.2, 0.2, 0.2, 0.8)

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
visible = false
modulate = Color(1, 0, 0, 0.5)